# BlackStory_Two_IA-master

./: README.md  main.py  pyproject.toml
logs/: full_conversation_20251117_181730.txt
src/config/: prompts.py
src/game/: council_engine.py  fight_engine.py  game_engine.py  inverse_engine.py
src/services/: api_client.py  detective.py  hint_generator.py  narrator.py  story_generator.py
src/utils/: config.py
web/: app.py
web/static/: script.js  style.css
web/templates/: index.html
